# ApkSign

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/Includes/apksig/: apk_reader.cpp  apk_reader.hpp  apk_verifier.cpp  apk_verifier.hpp  apksig.hpp  certificate_extractor.cpp  certificate_extractor.hpp  digest_verifier.cpp  digest_verifier.hpp  signature_scheme.hpp  signing_block.hpp  signing_block_locator.cpp  signing_block_locator.hpp  signing_block_parser.cpp  signing_block_parser.hpp  v2_v3_parser.cpp  v2_v3_parser.hpp
app/src/main/java/com/hmg/apksign/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
